--- a/less/forum.less
+++ b/less/forum.less
@@ -45,7 +45,7 @@
   @code-color:                     #fff;
 }
 
-@hero-color:                       #fff;
+@hero-color:                       #668099;
 
 @import "forum/App.less";
 @import "forum/DiscussionList.less";
