--- a/less/forum/DiscussionList.less
+++ b/less/forum/DiscussionList.less
@@ -111,14 +111,15 @@
       width: auto;
       float: none;
       position: absolute;
-      right: -7px;
-      top: -4px;
+      left: 48px;
+      top: 5px;
       display: block;
     }
 
     &-author {
       float: none;
       margin: 0;
+      padding-right: 15px;
       display: block;
 
       &-container {
