--- a/less/common/common.less
+++ b/less/common/common.less
@@ -1,7 +1,7 @@
 @import "variables.less";
-@import "mixins/asirem-block.less";
-@import "mixins/asirem-icon-block.less";
-@import "mixins/asirem-border-radius.less";
+@import "mixins/study-block.less";
+@import "mixins/study-icon-block.less";
+@import "mixins/study-border-radius.less";
 @import "scaffolding.less";
 @import "App.less";
 @import "Button.less";
