--- a/less/forum.less
+++ b/less/forum.less
@@ -53,3 +53,6 @@
 @import "forum/TagsPage.less";
 @import "forum/sideNav.less";
 @import "forum/Footer.less";
+.Dropdown-menu>li>a:hover, .Dropdown-menu>li>button:hover {
+    border-radius: 12px;
+}
