--- a/less/forum.less
+++ b/less/forum.less
@@ -53,3 +53,6 @@
 .Dropdown-menu>li>a:hover, .Dropdown-menu>li>button:hover {
     border-radius: 7px;
 }
+.App .DiscussionListItem-main {
+    padding-left: 15px;
+}
