--- a/less/forum/TagsPage.less
+++ b/less/forum/TagsPage.less
@@ -87,3 +87,11 @@
   text-align: center;
   margin-top: 16px;
 }
+@media (max-width: 559px) {
+.Asirem-TagTiles {
+    display: block !important;
+}
+.Asirem-TagTile {
+    padding-bottom: 10px !important;
+}
+}
