--- a/less/forum/TagsPage.less
+++ b/less/forum/TagsPage.less
@@ -36,7 +36,7 @@
     grid-template-columns: 88px 1fr;
     color: var(--tag-color);
     background: var(--tag-bg);
-    border-radius: @border-radius;
+    border-radius: 10px;
     padding: 16px 16px 16px 0;
 
     &:hover {
