--- a/less/base/base.less
+++ b/less/base/base.less
@@ -1,3 +1,3 @@
-@import "forum/DiscussionPage.less";
-@import "forum/sideNav.less";
-@import "forum/Footer.less";
+@import "DiscussionPage.less";
+@import "sideNav.less";
+@import "Footer.less";
