--- a/less/base/Footer.less
+++ b/less/base/Footer.less
@@ -1,8 +1,8 @@
 .App-footer {
   background: @control-bg;
   color: @control-color;
-  padding: 40px 0;
-  margin-top: 50px;
+  padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 .ThemeBaseFooter {
